--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,17 @@
 {
   "han": "Han",
   "fu": "Fu",
+  "sortby": "Sort By",
+  "yaku.han": "{han} Han",
+  "yaku.closedHandsOnly": "Closed",
+  "yaku.meldedPenalty": "melded-",
+  "yaku.yakuman": "Yakuman",
+  "yaku.doubleYakuman": "Double Yakuman",
+  "yaku.frequency1": "Very Rare",
+  "yaku.frequency2": "Rare",
+  "yaku.frequency3": "Avarage",
+  "yaku.frequency4": "Common",
+  "yaku.frequency5": "Very Common",
   "tanyao.name": "Tanyao",
   "tanyao.description": "Only the tiles 2 through 8 (no 1s, 9s, or honors)",
   "sanshokudoujun.name": "Sanshoku Doujun",
@@ -14,5 +25,75 @@
   "ittsu.name": "Ittsu",
   "ittsu.description": "The sequences 123, 456, and 789 in a suit",
   "daisangen.name": "Daisangen",
-  "daisangen.description": "A set of each of the three dragons"
+  "daisangen.description": "A set of each of the three dragons",
+  "ippatsu.name": "Ippatsu",
+  "ippatsu.description": "Win before your next discard. Calls invalidate",
+  "tsumo.name": "Menzen Tsumo",
+  "tsumo.description": "Draw your winning tile with a closed hand",
+  "yakuhai.name": "Yakuhai",
+  "yakuhai.description": "A set (or kan) of value honor tiles (dragons, seat wind, prevalent wind). Score for each set",
+  "honitsu.name": "Honitsu",
+  "honitsu.description": "Only one suit plus honors",
+  "toitoi.name": "Toitoi",
+  "toitoi.description": "Only triplets (or kans), no sequences",
+  "chiitoitsu.name": "Chiitoitsu",
+  "chiitoitsu.description": "Seven diﬀerent pairs",
+  "chanta.name": "Chanta",
+  "chanta.description": "All groups contain a 1, 9, or honor",
+  "chinitsu.name": "Chinitsu",
+  "chinitsu.description": "Only one suit. (no honors)",
+  "sanankou.name": "Sanankou",
+  "sanankou.description": "Three concealed triplets. The rest of the hand may be open",
+  "haitei.name": "Haitei",
+  "haitei.description": "Tsumo on the last draw from the wall",
+  "houtei.name": "Houtei",
+  "houtei.description": "Ron on the last discard from the wall",
+  "doubleRiichi.name": "Double Riichi",
+  "doubleRiichi.description": "Declare on your ﬁrst discard. Calls invalidate",
+  "junchan.name": "Junchan",
+  "junchan.description": "All groups contain a 1 or 9. (no honors)",
+  "shousangen.name": "Shousangen",
+  "shousangen.description": "Two sets and a pair of each dragon",
+  "rinshan.name": "Rinshan",
+  "rinshan.description": "Win on the dead wall draw after calling kan",
+  "honroutou.name": "Honroutou",
+  "honroutou.description": "Only 1s, 9s, and honors. (no 2 through 8)",
+  "chankan.name": "Chankan",
+  "chankan.description": "Win oﬀ a player upgrading a called triplet to a kan",
+  "ryanpeikou.name": "Ryanpeikou",
+  "ryanpeikou.description": "Two iipeikous. May be diﬀerent",
+  "sanshokudoukou.name": "Sanshoku Doukou",
+  "sanshokudoukou.description": "The same triplet in each suit",
+  "sankantsu.name": "Sankantsu",
+  "sankantsu.description": "Three kans",
+  "nagashiMangan.name": "Nagashi Mangan",
+  "nagashiMangan.description": "At the end, discarded only 1s, 9s, and honors, with none called",
+  "suukantsu.name": "Suukantsu",
+  "suukantsu.description": "Four kans",
+  "koukushi.name": "Koukushi Musou",
+  "koukushi.description": "Each terminal and honor and a pair",
+  "koukushi13.name": "Koukushi Musou 13-wait",
+  "koukushi13.description": "Koukushi with a thirteen-sided wait",
+  "suuankou.name": "Suuankou",
+  "suuankou.description": "Four concealed triplets",
+  "suuankouTanki.name": "Suuankou Tanki",
+  "suuankouTanki.description": "Suuankou waiting to make a pair",
+  "chinroutou.name": "Chinroutou",
+  "chinroutou.description": "Only 1s and 9s. (no 2 through 8 or honors)",
+  "shousuushi.name": "Shousuushi",
+  "shousuushi.description": "Three sets and a pair of each wind",
+  "daisuushi.name": "Daisuushi",
+  "daisuushi.description": "A set of each of the four winds",
+  "tsuuiisou.name": "Tsuuiisou",
+  "tsuuiisou.description": "Only honors. (no suited tiles)",
+  "ryuuiisou.name": "Ryuuiisou",
+  "ryuuiisou.description": "A hand consisting of only green tiles",
+  "chuuren.name": "Chuuren Poutou",
+  "chuuren.description": "1112345678999 in one suit and an extra tile of that suit",
+  "chuuren9.name": "Junsei Chuuren Poutou",
+  "chuuren9.description": "Chuuren with a 9-sided wait",
+  "tenhou.name": "Tenhou",
+  "tenhou.description": "Win on your opening hand or ﬁrst draw. Calls invalidate (Oya)",
+  "chiihou.name": "Chiihou",
+  "chiihou.description": "Win on your opening hand or ﬁrst draw. Calls invalidate (Ko)"
 }
