ci: add crowdin

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,6 +3,15 @@
   "fu": "Fu",
   "frequency": "Frequency",
   "sortby": "Sort By",
+
+  "nav.cheatsheet": "Cheatsheet",
+  "nav.calculator": "Calculator",
+  "nav.home": "Home",
+  "nav.others": "Others",
+
+  "more.info": "Info",
+  "more.settings": "Settings",
+
   "yaku.han": "{han} Han",
   "yaku.closedHandsOnly": "Closed",
   "yaku.meldedPenalty": "melded-",
@@ -13,91 +22,88 @@
   "yaku.frequency3": "Avarage",
   "yaku.frequency4": "Common",
   "yaku.frequency5": "Very Common",
-  "tanyao.name": "Tanyao",
-  "tanyao.description": "Only the tiles 2 through 8 (no 1s, 9s, or honors)",
-  "sanshokudoujun.name": "Sanshoku Doujun",
-  "sanshokudoujun.description": "The same sequence in each suit",
-  "iipeikou.name": "Iipeikou",
-  "iipeikou.description": "Two of the exact same sequence",
-  "pinfu.name": "Pinfu",
-  "pinfu.description": "A hand worth 0 fu. All sequences, with a non-Yakuhai pair and a two sided open wait (23, not 12, 13, or 1234, eg.)",
-  "riichi.name": "Riichi",
-  "riichi.description": "1000 point bet. Cannot change hand, discard draws unless you win",
-  "ittsu.name": "Ittsu",
-  "ittsu.description": "The sequences 123, 456, and 789 in a suit",
-  "daisangen.name": "Daisangen",
-  "daisangen.description": "A set of each of the three dragons",
-  "ippatsu.name": "Ippatsu",
-  "ippatsu.description": "Win before your next discard. Calls invalidate",
-  "tsumo.name": "Menzen Tsumo",
-  "tsumo.description": "Draw your winning tile with a closed hand",
-  "yakuhai.name": "Yakuhai",
-  "yakuhai.description": "A set (or kan) of value honor tiles (dragons, seat wind, prevalent wind). Score for each set",
-  "honitsu.name": "Honitsu",
-  "honitsu.description": "Only one suit plus honors",
-  "toitoi.name": "Toitoi",
-  "toitoi.description": "Only triplets (or kans), no sequences",
-  "chiitoitsu.name": "Chiitoitsu",
-  "chiitoitsu.description": "Seven diﬀerent pairs",
-  "chanta.name": "Chanta",
-  "chanta.description": "All groups contain a 1, 9, or honor",
-  "chinitsu.name": "Chinitsu",
-  "chinitsu.description": "Only one suit. (no honors)",
-  "sanankou.name": "Sanankou",
-  "sanankou.description": "Three concealed triplets. The rest of the hand may be open",
-  "haitei.name": "Haitei",
-  "haitei.description": "Tsumo on the last draw from the wall",
-  "houtei.name": "Houtei",
-  "houtei.description": "Ron on the last discard from the wall",
-  "doubleRiichi.name": "Double Riichi",
-  "doubleRiichi.description": "Declare on your ﬁrst discard. Calls invalidate",
-  "junchan.name": "Junchan",
-  "junchan.description": "All groups contain a 1 or 9. (no honors)",
-  "shousangen.name": "Shousangen",
-  "shousangen.description": "Two sets and a pair of each dragon",
-  "rinshan.name": "Rinshan",
-  "rinshan.description": "Win on the dead wall draw after calling kan",
-  "honroutou.name": "Honroutou",
-  "honroutou.description": "Only 1s, 9s, and honors. (no 2 through 8)",
-  "chankan.name": "Chankan",
-  "chankan.description": "Win oﬀ a player upgrading a called triplet to a kan",
-  "ryanpeikou.name": "Ryanpeikou",
-  "ryanpeikou.description": "Two iipeikous. May be diﬀerent",
-  "sanshokudoukou.name": "Sanshoku Doukou",
-  "sanshokudoukou.description": "The same triplet in each suit",
-  "sankantsu.name": "Sankantsu",
-  "sankantsu.description": "Three kans",
-  "nagashiMangan.name": "Nagashi Mangan",
-  "nagashiMangan.description": "At the end, discarded only 1s, 9s, and honors, with none called",
-  "suukantsu.name": "Suukantsu",
-  "suukantsu.description": "Four kans",
-  "koukushi.name": "Koukushi Musou",
-  "koukushi.description": "Each terminal and honor and a pair",
-  "koukushi13.name": "Koukushi Musou 13-wait",
-  "koukushi13.description": "Koukushi with a thirteen-sided wait",
-  "suuankou.name": "Suuankou",
-  "suuankou.description": "Four concealed triplets",
-  "suuankouTanki.name": "Suuankou Tanki",
-  "suuankouTanki.description": "Suuankou waiting to make a pair",
-  "chinroutou.name": "Chinroutou",
-  "chinroutou.description": "Only 1s and 9s. (no 2 through 8 or honors)",
-  "shousuushi.name": "Shousuushi",
-  "shousuushi.description": "Three sets and a pair of each wind",
-  "daisuushi.name": "Daisuushi",
-  "daisuushi.description": "A set of each of the four winds",
-  "tsuuiisou.name": "Tsuuiisou",
-  "tsuuiisou.description": "Only honors. (no suited tiles)",
-  "ryuuiisou.name": "Ryuuiisou",
-  "ryuuiisou.description": "A hand consisting of only green tiles",
-  "chuuren.name": "Chuuren Poutou",
-  "chuuren.description": "1112345678999 in one suit and an extra tile of that suit",
-  "chuuren9.name": "Junsei Chuuren Poutou",
-  "chuuren9.description": "Chuuren with a 9-sided wait",
-  "tenhou.name": "Tenhou",
-  "tenhou.description": "Win on your opening hand or ﬁrst draw. Calls invalidate (Oya)",
-  "chiihou.name": "Chiihou",
-  "chiihou.description": "Win on your opening hand or ﬁrst draw. Calls invalidate (Ko)",
-
-  "more.info": "Info",
-  "more.settings": "Settings"
+  "yaku.tanyao.name": "Tanyao",
+  "yaku.tanyao.description": "Only the tiles 2 through 8 (no 1s, 9s, or honors)",
+  "yaku.sanshokudoujun.name": "Sanshoku Doujun",
+  "yaku.sanshokudoujun.description": "The same sequence in each suit",
+  "yaku.iipeikou.name": "Iipeikou",
+  "yaku.iipeikou.description": "Two of the exact same sequence",
+  "yaku.pinfu.name": "Pinfu",
+  "yaku.pinfu.description": "A hand worth 0 fu. All sequences, with a non-Yakuhai pair and a two sided open wait (23, not 12, 13, or 1234, eg.)",
+  "yaku.riichi.name": "Riichi",
+  "yaku.riichi.description": "1000 point bet. Cannot change hand, discard draws unless you win",
+  "yaku.ittsu.name": "Ittsu",
+  "yaku.ittsu.description": "The sequences 123, 456, and 789 in a suit",
+  "yaku.daisangen.name": "Daisangen",
+  "yaku.daisangen.description": "A set of each of the three dragons",
+  "yaku.ippatsu.name": "Ippatsu",
+  "yaku.ippatsu.description": "Win before your next discard. Calls invalidate",
+  "yaku.tsumo.name": "Menzen Tsumo",
+  "yaku.tsumo.description": "Draw your winning tile with a closed hand",
+  "yaku.yakuhai.name": "Yakuhai",
+  "yaku.yakuhai.description": "A set (or kan) of value honor tiles (dragons, seat wind, prevalent wind). Score for each set",
+  "yaku.honitsu.name": "Honitsu",
+  "yaku.honitsu.description": "Only one suit plus honors",
+  "yaku.toitoi.name": "Toitoi",
+  "yaku.toitoi.description": "Only triplets (or kans), no sequences",
+  "yaku.chiitoitsu.name": "Chiitoitsu",
+  "yaku.chiitoitsu.description": "Seven diﬀerent pairs",
+  "yaku.chanta.name": "Chanta",
+  "yaku.chanta.description": "All groups contain a 1, 9, or honor",
+  "yaku.chinitsu.name": "Chinitsu",
+  "yaku.chinitsu.description": "Only one suit. (no honors)",
+  "yaku.sanankou.name": "Sanankou",
+  "yaku.sanankou.description": "Three concealed triplets. The rest of the hand may be open",
+  "yaku.haitei.name": "Haitei",
+  "yaku.haitei.description": "Tsumo on the last draw from the wall",
+  "yaku.houtei.name": "Houtei",
+  "yaku.houtei.description": "Ron on the last discard from the wall",
+  "yaku.doubleRiichi.name": "Double Riichi",
+  "yaku.doubleRiichi.description": "Declare on your ﬁrst discard. Calls invalidate",
+  "yaku.junchan.name": "Junchan",
+  "yaku.junchan.description": "All groups contain a 1 or 9. (no honors)",
+  "yaku.shousangen.name": "Shousangen",
+  "yaku.shousangen.description": "Two sets and a pair of each dragon",
+  "yaku.rinshan.name": "Rinshan",
+  "yaku.rinshan.description": "Win on the dead wall draw after calling kan",
+  "yaku.honroutou.name": "Honroutou",
+  "yaku.honroutou.description": "Only 1s, 9s, and honors. (no 2 through 8)",
+  "yaku.chankan.name": "Chankan",
+  "yaku.chankan.description": "Win oﬀ a player upgrading a called triplet to a kan",
+  "yaku.ryanpeikou.name": "Ryanpeikou",
+  "yaku.ryanpeikou.description": "Two iipeikous. May be diﬀerent",
+  "yaku.sanshokudoukou.name": "Sanshoku Doukou",
+  "yaku.sanshokudoukou.description": "The same triplet in each suit",
+  "yaku.sankantsu.name": "Sankantsu",
+  "yaku.sankantsu.description": "Three kans",
+  "yaku.nagashiMangan.name": "Nagashi Mangan",
+  "yaku.nagashiMangan.description": "At the end, discarded only 1s, 9s, and honors, with none called",
+  "yaku.suukantsu.name": "Suukantsu",
+  "yaku.suukantsu.description": "Four kans",
+  "yaku.koukushi.name": "Koukushi Musou",
+  "yaku.koukushi.description": "Each terminal and honor and a pair",
+  "yaku.koukushi13.name": "Koukushi Musou 13-wait",
+  "yaku.koukushi13.description": "Koukushi with a thirteen-sided wait",
+  "yaku.suuankou.name": "Suuankou",
+  "yaku.suuankou.description": "Four concealed triplets",
+  "yaku.suuankouTanki.name": "Suuankou Tanki",
+  "yaku.suuankouTanki.description": "Suuankou waiting to make a pair",
+  "yaku.chinroutou.name": "Chinroutou",
+  "yaku.chinroutou.description": "Only 1s and 9s. (no 2 through 8 or honors)",
+  "yaku.shousuushi.name": "Shousuushi",
+  "yaku.shousuushi.description": "Three sets and a pair of each wind",
+  "yaku.daisuushi.name": "Daisuushi",
+  "yaku.daisuushi.description": "A set of each of the four winds",
+  "yaku.tsuuiisou.name": "Tsuuiisou",
+  "yaku.tsuuiisou.description": "Only honors. (no suited tiles)",
+  "yaku.ryuuiisou.name": "Ryuuiisou",
+  "yaku.ryuuiisou.description": "A hand consisting of only green tiles",
+  "yaku.chuuren.name": "Chuuren Poutou",
+  "yaku.chuuren.description": "1112345678999 in one suit and an extra tile of that suit",
+  "yaku.chuuren9.name": "Junsei Chuuren Poutou",
+  "yaku.chuuren9.description": "Chuuren with a 9-sided wait",
+  "yaku.tenhou.name": "Tenhou",
+  "yaku.tenhou.description": "Win on your opening hand or ﬁrst draw. Calls invalidate (Oya)",
+  "yaku.chiihou.name": "Chiihou",
+  "yaku.chiihou.description": "Win on your opening hand or ﬁrst draw. Calls invalidate (Ko)"
 }
