--- a/lang/en.json
+++ b/lang/en.json
@@ -6,8 +6,8 @@
 
   "nav.cheatsheet": "Cheatsheet",
   "nav.calculator": "Calculator",
-  "nav.home": "Home",
-  "nav.others": "Others",
+  "nav.home": "Riichi Toolbox",
+  "nav.more": "More",
 
   "more.info": "Info",
   "more.settings": "Settings",
