perf: load translation on demand

--- a/lang/en.json
+++ b/lang/en.json
@@ -12,6 +12,8 @@
   "more.info": "Info",
   "more.settings": "Settings",
 
+  "yaku.yakuList": "Yaku List",
+  "yaku.fuList": "Fu List",
   "yaku.han": "{han} Han",
   "yaku.closedHandsOnly": "Closed",
   "yaku.meldedPenalty": "melded-",
