fix: I dont really like coffee

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,7 +16,7 @@
 
   "more.about": "About",
   "more.supportme": "Support Us",
-  "more.donation": "Buy Me a Coffee",
+  "more.donation": "Buy Me a Coke",
   "more.contributeTranslationTitle": "Help Translate",
   "more.contributeTranslationDesc": "Contribute your translation on our Crowdin project!",
   "more.about.projectPage": "Project Page",
