--- a/lang/en.json
+++ b/lang/en.json
@@ -21,7 +21,7 @@
   "more.contributeTranslationDesc": "Contribute your translation on our Crowdin project!",
   "more.about.projectPage": "Project Page",
   "more.about.osslicense": "Open Source License",
-  "more.about.attribution": "Attribution Infomation",
+  "more.about.attribution": "Attribution Information",
 
   "calculator.whichToDiscard.header": "Which to Discard?",
   "calculator.whichToDiscard.content": "Given a hand of tiles, calculates the optimal discard to maximize your chances of winning.",
@@ -35,7 +35,7 @@
   "yaku.doubleYakuman": "Double Yakuman",
   "yaku.frequency1": "Very Rare",
   "yaku.frequency2": "Rare",
-  "yaku.frequency3": "Avarage",
+  "yaku.frequency3": "Average",
   "yaku.frequency4": "Common",
   "yaku.frequency5": "Very Common",
   "yaku.tanyao.name": "Tanyao",
