feat(cheatsheet): add fu page

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,8 @@
 {
   "han": "Han",
   "fu": "Fu",
+  "tsumo": "Tsumo",
+  "ron": "Ron",
   "frequency": "Frequency",
   "sortby": "Sort By",
   "title": "Riichi Toolbox",
@@ -13,6 +15,37 @@
   "cheatsheet.yakuList": "Yaku List",
   "cheatsheet.fuList": "Fu List",
   "cheatsheet.scoring": "Scoring",
+
+  "cheatsheet.fu.fu": "{fu} Fu",
+  "cheatsheet.fu.groupfu": "Group Fu",
+  "cheatsheet.fu.group.openTriplet2": "2 Fu",
+  "cheatsheet.fu.group.closedx2": "Closed × 2",
+  "cheatsheet.fu.group.19x2": "Terminal or Honor × 2",
+  "cheatsheet.fu.group.kanx4": "Kan × 4",
+  "cheatsheet.fu.group.example1": "Ron(Open) Triplet 9m: 2 Fu × 2 (Terminal) = 4 Fu",
+  "cheatsheet.fu.group.example2": "Hatsu Closed Kan = 2 Fu × 4 (Kan) × 2 (Honor) × 2 (Closed) = 32 Fu",
+  "cheatsheet.fu.group.example3": "Chun Pon = 2 Fu × 2 (Honor) = 4 Fu",
+
+  "cheatsheet.fu.pairfu": "Pair Fu",
+  "cheatsheet.fu.pair.yakuhai": "Yakuhai Pair",
+  "cheatsheet.fu.pair.dragon": "Dragon Pair",
+  "cheatsheet.fu.pair.seatwind": "Seat Wind Pair",
+  "cheatsheet.fu.pair.roundwind": "Round Wind Pair",
+  "cheatsheet.fu.doublewind": "Double Wind 4 Fu",
+
+  "cheatsheet.fu.hand.closedhand": "Closed Hand",
+  "cheatsheet.fu.hand.menzenron": "+10 Fu",
+  "cheatsheet.fu.hand.menzentsumo": "+1 Han(Menzen Tsumo), +0 Fu",
+  "cheatsheet.fu.hand.open": "Open Hand",
+  "cheatsheet.fu.hand.openron": "+0 Fu",
+  "cheatsheet.fu.hand.opentsumo": "+2 Fu",
+  "cheatsheet.fu.handfu": "Hand Fu",
+
+  "cheatsheet.fu.roundup.roundup": "Round Up to Next 10 Fu",
+  "cheatsheet.fu.roundup.still20": "If Still 20 Fu",
+  "cheatsheet.fu.roundup.still20.menzen": "If closed hand, then +1 Han(Pinfu)",
+  "cheatsheet.fu.roundup.still20.open": "If open hand, then add up to 30 Fu",
+  "cheatsheet.fu.roundupfu": "Round Up",
 
   "more.settings": "Settings",
   "more.settings.lang": "Language",
